<resources>
    <string name="app_name">博销宝</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="input_order">请输入指令:</string>
    <string name="characterset">字符集</string>
    <string name="size_text">字号</string>
    <string name="accessibility_description">这里是描述辅助功能的文案</string>
    <string name="rule_text">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^*()_+-=/*?.,"|\:;[]{}-&quot;&amp;&lt;&gt;</string>
    <string name="rule_text_barcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="rule_number">0123456789</string>
    <string name="rule_number_float">0123456789.</string>


    <string name="sale">销售</string>
    <string name="stock">库存</string>
    <string name="setting">设置</string>
    <string name="check_list">查单</string>
    <string name="order_list">取单</string>
    <string name="report_loss">报损</string>
    <string name="exit">退出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
