<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="horizontal">

    <!--左侧边栏-->
    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/text_color_smallblack">
        <!--头像-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="auto">

            <ImageView
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:src="@drawable/bxb_logo_new"/>

            <TextView
                android:id="@+id/staff_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ffffff"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
        <!--销售-->
        <LinearLayout
            android:id="@+id/sale_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/left_item_select"
            android:focusable="auto">

            <TextView
                android:id="@+id/sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--库存-->
        <LinearLayout
            android:id="@+id/inventory_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="auto">

            <TextView
                android:id="@+id/inventory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stock"
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--设置-->
        <LinearLayout
            android:id="@+id/set_up_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="auto">

            <TextView
                android:id="@+id/set_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--查单-->
        <LinearLayout
            android:id="@+id/btnQueryRetailTradeList_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"

            android:gravity="center"
            android:focusable="auto">

            <TextView
                android:id="@+id/btnQueryRetailTradeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_list"
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--取单-->
        <LinearLayout
            android:id="@+id/bill_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="auto">

            <TextView
                android:id="@+id/bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="取单"
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--报损-->
        <LinearLayout
            android:id="@+id/report_loss_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:focusable="auto">

            <TextView
                android:id="@+id/report_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--退出-->
        <LinearLayout
            android:id="@+id/logout_linear"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:focusable="auto">

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="22sp"
                android:textColor="#ffffff"/>

        </LinearLayout>
        <!--时间-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2020-02-20 \n 16:31:30 \n 联通5G"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </LinearLayout>
    

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/all_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/setting_item"
            android:layout_width="100dp"
            android:layout_height="132dp"
            android:layout_marginTop="232dp"
            android:orientation="vertical"
            android:visibility="invisible">
            <!--打印机-->
            <LinearLayout
                android:id="@+id/printer_linear"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/text_color_smallblack"
                android:focusable="auto"
                android:visibility="gone">

                <TextView
                    android:id="@+id/printer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="打印机"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>

            </LinearLayout>
            <!--前台小票-->
            <LinearLayout
                android:id="@+id/desk_ticket_linear"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/text_color_smallblack"
                android:focusable="auto">

                <TextView
                    android:id="@+id/desk_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="前台小票"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>

            </LinearLayout>
            <!--数据处理-->
            <LinearLayout
                android:id="@+id/data_processing_linear"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/text_color_smallblack"
                android:focusable="auto">

                <TextView
                    android:id="@+id/data_processing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="数据处理"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="#ffffff"/>

            </LinearLayout>

        </LinearLayout>
        
        
    </FrameLayout>


    
</LinearLayout>
